# Sage

./: .claudeignore  .gitignore  pixel_character.html  pyproject.toml
default_workspace/agents/sage/: AGENT.md  SOUL.md
src/sage/cli/: __init__.py  chat.py  main.py
src/sage/core/: agent.py  agent_loader.py  session_state.py  skill_loader.py
src/sage/provider/llm/: base.py
src/sage/tools/: __init__.py  base.py  builtin_tools.py  registry.py  skill_tool.py
src/sage/utils/: __init__.py
